<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="city">
        <item>东莞市</item>
        <item>佛山市</item>
    </string-array>
    <!-- 通用 -->
    <string name="colon">：</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="default_error_msg">应用异常，请稍后重试</string>
    <string name="query_datas_fail">查询数据失败，请稍后重试</string>
    <string name="no_data">无记录</string>
    <string name="unknown">未知</string>
    <string name="querying">正在查询</string>
    <string name="submitting_request">正在提交请求</string>
    <string name="submit_fail">请求失败</string>
    <string name="operation_success">操作成功</string>
    <string name="back">返回</string>
    <string name="hint">提示</string>

    <!-- 密码 -->
    <string name="set_password_hint">请设置您的支付密码以便后续操作</string>
    <string name="set_password">设置支付密码</string>
    <string name="modify_password">修改支付密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">确认新密码</string>
    <string name="hint_old">请输入原密码</string>
    <string name="hint_new">请输入6位数字的新密码</string>
    <string name="hint_new_again">请再次输入新密码</string>
    <string name="id_card">身份证号码</string>
    <string name="id_card_hint">请输入身份证号码</string>
    <string name="verify_code">验证码</string>
    <string name="save">保存</string>

    <!-- 预约时间选择 -->
    <string name="select_date">选择日期</string>
    <string name="select_period">选择时段</string>
    <string name="app_name">拍拍学车</string>
    <string name="version_name">1.1.1</string>

    <!-- 扫描二维码 -->
    <string name="scan">扫描二维码</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="scan_result_abnormal">扫描结果异常</string>

    <!-- 登录 -->
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="hint_input_captcha">请输入验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="toast_input_phone">请输入手机号码</string>
    <string name="toast_input_right_phone">请输入正确的手机号码</string>
    <string name="toast_get_captcha">请先获取验证码</string>
    <string name="toast_input_captcha">请输入验证码</string>
    <string name="toast_input_right_captcha">请输入正确的验证码</string>

    <!-- 注册 -->
    <string name="name">请输入姓名</string>
    <string name="id_num">请输入身份证号码</string>
    <string name="region">请选择所在地区</string>
    <string name="branch_sch">请选择报名分校</string>
    
    <!-- 个人中心 -->
    <string name="logout">退出登录</string>
    <string name="about">关于</string>
    <string name="personal_center">个人中心</string>
    <string name="p_my_order">我的订单</string>
    <string name="modify_pay_pwd">修改支付密码</string>
    <string name="reset_pay_pwd">重置支付密码</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_address">上车地址</string>
    <string name="personal_info">个人资料</string>
    <string name="version_update">版本更新</string>
    <string name="declare">声明：</string>
    <string name="id">身份证号码：</string>
    <string name="address">住址：</string>
    <string name="school_registration">报名分校：</string>
    <string name="time_registration">报名时间：</string>
    <string name="contact_phone">联系电话：</string>
    <string name="balance">当前余额：</string>
    <string name="balance2">余额：</string>
    <string name="yuan">元</string>
    <string name="rmb">￥</string>
    <string name="unusable_coupon">查看不可用券</string>

    <!-- 主页 -->
    <!-- 预约教练 -->
    <string name="order_times">预约次数</string>
    <string name="order">单</string>
    <string name="book">预约</string>
    <string name="search_by_trainer_name">按教练姓名查询</string>
    <string name="search_school_yard">输入地址寻找驾校</string>
    <string name="service_phone">服务电话</string>
    <string name="phone">电话</string>
    <string name="_address">地址</string>
    <string name="vicinity">附近</string>
    <string name="school_no_trainer">该分校没有可预约教练</string>
    <string name="your_apply_school">您的报名分校</string>
    <string name="your_last_school">您上一次培训场地</string>
    <string name="my_location">我的位置</string>

    <!-- 地图 -->
    <string name="school_no_location">该分校没有提供位置信息</string>

    <!-- 我的预约 -->
    <string name="my_order">我的预约</string>
    <string name="training_record">培训记录</string>
    <string name="waiting_confirm">待确认</string>
    <string name="confirmed">已确认</string>
    <string name="in_training">培训中</string>
    <string name="cancel_order">取消订单</string>
    <string name="start_sign_in">开始签到</string>
    <string name="end_sign_in">结束签到</string>
    <string name="training_course">培训课程</string>
    <string name="order_time">预约时间</string>
    <string name="order_trainer">预约教练</string>
    <string name="order_status">订单状态</string>
    <string name="course">课程</string>
    <string name="time">时间</string>
    <string name="trainer">教练</string>
    <string name="status">状态</string>
    <string name="confirm_order">确认订单</string>
    <string name="pay">支付</string>
    <string name="operate_fail_update_app">操作失败，请更新应用</string>

    <!-- 历史订单 -->
    <string name="history_order">历史订单</string>
    <string name="finished">完成</string>
    <string name="evaled">查看评价</string>
    <string name="_eval">评价</string>
    <string name="training_car">培训车辆</string>

    <!-- 预约学车 -->
    <string name="period">学时</string>
    <string name="training_period">培训学时</string>
    <string name="training_address">培训地址</string>
    <string name="submit_order">提交订单</string>
    <string name="booking_driving_training">预约学车</string>
    <string name="car">车辆</string>
    <string name="select_car">选择车辆</string>
    <string name="get_cars_fail">获取车辆信息失败</string>
    <string name="fee">费用</string>
    <string name="training_fee">培训费用</string>
    <string name="actual_payment">实际支付</string>
    <string name="please_select_car">请选择车辆</string>
    <string name="please_select_period">请选择时段</string>
    <string name="period_must_be_consecutive">必须选择连续的预约时段</string>
    <string name="trainer_no_order">该教练暂无可预约时段</string>
    <string name="course_no_order">该科目未来7天内没有培训计划</string>
    <string name="_trainer_name">教练姓名</string>
    <string name="belong_school">所属分校</string>
    <string name="branch_school">分校</string>
    <string name="order_detail">订单详情</string>
    <string name="canceling_order">正在取消订单</string>
    <string name="cancel_fail">取消失败</string>

    <!-- 支付 -->
    <string name="order_payment">订单支付</string>
    <string name="pay_password">支付密码</string>
    <string name="please_input_pay_password">请输入支付密码。</string>
    <string name="payment_verification">支付验证</string>
    <string name="unselect_coupon">不使用优惠券</string>
    <string name="settlement_amount">结算金额</string>
    <string name="original_price">原价</string>
    <string name="_original_price">原&#8195;价</string>
    <string name="preferential_price">活动价</string>
    <string name="preferential_amount">已优惠</string>
    <string name="pay_type">支付方式</string>
    <string name="we_chat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="query_pay_type_fail">查询支付方式失败</string>
    <string name="please_select_pay_type">请选择支付方式</string>
    <string name="paying">正在支付</string>
    <string name="pay_fail">支付失败</string>
    <string name="confirm_payment">确认支付</string>
    <string name="pay_fee">支付费用</string>
    <string name="remaining_time">剩余时间</string>
    <string name="please_select_yue">结算金额为0.00元，请使用余额支付。</string>
    <string name="balance_insufficient">余额不足</string>

    <!-- 我的消息 -->
    <string name="my_message">我的消息</string>
    <string name="get_message_fail">获取消息失败</string>
    <string name="delete_message_fail">删除消息失败</string>
    <string name="delete_record_or_not">是否删除该记录？</string>

    <string-array name="message_operations">
        <item>删除</item>
    </string-array>

    <!-- 培训点评 -->
    <string name="training_evaluation">培训点评</string>
    <string name="evaluation_detail">评价详情</string>
    <string name="training_complete">培训完成</string>
    <string name="anonymous_evaluation">匿名评价</string>
    <string name="duration">时长</string>
    <string name="submit_anonymous_evaluation">提交匿名评价</string>
    <string name="select_label">选择标签</string>
    <string name="suggestion_and_complaint_hint">其它建议和投诉（内容匿名，学员放心填写）</string>
    <string name="get_labels_fail">获取标签列表失败</string>
    <string name="submit_evaluation_or_not">是否提交评价？</string>
    
    <!-- 首页底部栏 -->
    <string name="bottom_home">首页</string>
    <string name="bottom_drive">练车</string>
    <string name="person_center">我</string>
    
     <!-- 首页顶部栏 -->
    <string name="home_tv_local">深圳</string>
    <string name="home_tv_title">拍拍学车</string>
    <string name="home_tv_call">客服</string>
    <string name="personal_center_tv_title">我的</string>
    <!--分享界面-->
    <string name="share_rule_1">1.每推荐一名好友报名，您将获得100元奖励，您的好友报名费立减200元。</string>
    <string name="share_rule_2">2.如发现作弊行为将取消用户活动资格，并扣除所获奖励。</string>
    <string name="share_rule_3">3.如对本活动规则有任何疑问，请联系拍拍学车客服。</string>
    <string name="share_rule_4">4.本活动最终解释权归拍拍学车所有。</string>
    <string name="tuijian1">每推荐一名好友报名，您将获得100元奖励</string>
    <string name="tuijian2">好友报名立减200元</string>


</resources>