<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical" >

    <include layout="@layout/inc_common_title" />

    <View
        style="@style/divider"
        android:layout_marginTop="@dimen/pager_paddding"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="@dimen/about_menu_height"
        android:orientation="horizontal"
        android:padding="@dimen/pager_paddding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/old_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium_xxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium_xxx"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_10"
            android:layout_marginStart="@dimen/view_10"
            android:background="@null"
            android:hint="@string/hint_old"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/text_msg"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_medium_xxx" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="@dimen/about_menu_height"
        android:orientation="horizontal"
        android:padding="@dimen/pager_paddding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/new_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium_xxx" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium_xxx"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_10"
            android:layout_marginStart="@dimen/view_10"
            android:background="@null"
            android:hint="@string/hint_new"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/text_msg"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_medium_xxx" />
    </LinearLayout>

    <View style="@style/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="@dimen/about_menu_height"
        android:orientation="horizontal"
        android:padding="@dimen/pager_paddding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/new_password_again"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium_xxx" />

        <EditText
            android:id="@+id/etConfirmNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_10"
            android:layout_marginStart="@dimen/view_10"
            android:background="@null"
            android:hint="@string/hint_new_again"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/text_msg"
            android:textColorHint="@color/text_hint"
            android:textSize="@dimen/text_medium_xxx" />
    </LinearLayout>

    <View
        style="@style/divider"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSave"
        style="@style/ButtonBlue"
        android:layout_marginLeft="@dimen/view_10"
        android:layout_marginRight="@dimen/view_10"
        android:layout_marginTop="@dimen/login_et_margin_top"
        android:text="@string/save" />

</LinearLayout>