<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.session.dgjp.view.NoScollerViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_F8F8F8"
        />

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_48"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/bt_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="@dimen/view_3"
            android:drawableTop="@drawable/bottom_home_img_bg"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/bottom_home"
            android:textColor="@drawable/bottom_tv_color"
            android:textSize="@dimen/text_small_x"
            />

        <RadioButton
            android:id="@+id/bt_practice_driving"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/view_3"
            android:drawableTop="@drawable/bottom_drive_img_bg"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/bottom_drive"
            android:textColor="@drawable/bottom_tv_color"
            android:textSize="@dimen/text_small_x"
            />

        <RadioButton
            android:id="@+id/bt_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/view_3"
            android:drawableTop="@drawable/bottom_me_img_bg"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/person_center"
            android:textColor="@drawable/bottom_tv_color"
            android:textSize="@dimen/text_small_x"
            />
    </RadioGroup>

</LinearLayout>
